--- a/index.html
+++ b/index.html
@@ -50,18 +50,8 @@
                                 <nav id="main-nav" class="main-nav">
                                     <ul id="menu-primary-menu" class="menu">
 
-                                        <li class="menu-item menu-item-has-children menu-current-item">
+                                        <li class="menu-item ">
                                             <a href="#">Home</a>
-                                            <ul class="sub-menu">
-                                                <li class="menu-item"><a href="cardcarousel.html">Card Carousel</a></li>
-                                                <li class="menu-item"><a href="zigzagcarousel.html">Zigzag Carousel</a>
-                                                </li>
-                                                <li class="menu-item"><a href="coverflowcarousel.html">Coverflow
-                                                        Carousel</a></li>
-                                                <li class="menu-item"><a href="itemcarousel.html">Item Carousel</a></li>
-                                                <li class="menu-item"><a href="3dcarousel.html">3D Carousel</a></li>
-
-                                            </ul>
                                         </li>
                                         <li class="menu-item menu-item-has-children">
                                             <a href="#">Explore</a>
